--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+beautifulsoup4==4.9.0
 ipdb==0.13.2
-beautifulsoup4==4.8.2
 lxml==4.5.0
-pandas==1.0.1
+msgpack==1.0.0
+pandas==1.0.3
+requests==2.22.0
+yapf==0.30.0
