Minor change in Lombardia, add tests, multiple fixes
- Add 2019/2020 switch for Lombardia
- Add test folder and serialization test
- Cleanup utils
- Fix AQS serialization functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Cache
 __pycache__/
 *.py[cod]
 *$py.class
@@ -25,4 +26,7 @@ MANIFEST
 .vscode/
 
 # Dump
-dump/**
+dump/
+
+# Test
+.pytest_cache/
