Add entrypoint sandbox flag, bring back poetry, update README
- New --file flag for sandbox mode
- Add again poetry with custom configuration (poetry.toml)
- Adapt yapf, add .yapfignore to handle local .venv/ folder
- Update README and CONTRIBUTING

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # Cache
-__pycache__/
+**/__pycache__/
 *.py[cod]
 *$py.class
 
-# pyenv
+# pyenv / virtualenv
 .python-version
+.venv/
 
 # Distribution / packaging
 .Python
