--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,21 +7,21 @@ license = "GPL-3.0"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-beautifulsoup4 = "4.9.0"
-lxml = "4.5.0"
+beautifulsoup4 = "4.9.1"
+lxml = "4.5.2"
 msgpack = "1.0.0"
-pandas = "1.0.3"
-plotly = "4.8.2"
-psutil = "5.7.0"
-pytest = "5.4.3"
-requests = "2.22.0"
+pandas = "1.1.0"
+plotly = "4.9.0"
+psutil = "5.7.2"
+pytest = "6.0.0"
+requests = "2.24.0"
 yapf = "0.30.0"
-PyQt5 = "^5.15.0"
-progressbar = "^2.5"
-rich = "^3.3.2"
+PyQt5 = "5.15.0"
+progressbar = "2.5"
+rich = "4.2.0"
 
 [tool.poetry.dev-dependencies]
-ipdb = "0.13.2"
+ipdb = "^0.13.3"
 pylint = "^2.5.3"
 
 [build-system]
